--- a/docs/03-data_visualization.Rmd
+++ b/docs/03-data_visualization.Rmd
@@ -1,6 +1,8 @@
 # Data visualization
 
-Begin visualizing trends seen in the camera trap data. First, connect to the database and load the tables and packages from before. We will also be using `ggplot2`.
+Begin visualizing trends seen in the camera trap data. First, connect to
+the database and load the tables and packages from before. We will also
+be using `ggplot2`.
 
 ```{r pkgs_db_tables, message = FALSE}
 library(DBI)
@@ -18,7 +20,9 @@ sequence <- dbGetQuery(wlf_cam_db, "SELECT * FROM sequence;")
 detection <- dbGetQuery(wlf_cam_db, "SELECT * FROM detection;")
 ```
 
-To use the same color scheme shown, run `devtools::install_github("cdanielcadena/tanagR")` and load the package `tanagR`.
+To use the same color scheme shown, run
+`devtools::install_github("cdanielcadena/tanagR")` and load the package
+`tanagR`.
 
 ```{r tanagR_pkg, message = FALSE}
 library(tanagR)
@@ -26,7 +30,9 @@ library(tanagR)
 
 ## Species in September and October
 
-We want to know the number of individuals in each species detected in September and October. There are many species observed throughout these data, so we will break down the detections as we go.
+We want to know the number of individuals in each species detected in
+September and October. There are many species observed throughout these
+data, so we will break down the detections as we go.
 
 ```{r species_months, message = FALSE}
 # filter out NA values for species
@@ -42,15 +48,19 @@ sp_month <- sp_detect[sp_detect$species != "sapiens", ] %>% # filter out detecti
   select(order, family, genus_species, group_number, common_name, month) # select variables genus_species, group_number, and habitat
 ```
 
-### Species detected > 100 times
-Let's visualize this for species with more than 100 detections in September or October.
+### Species detected \> 100 times
 
-```{r vis_100_detect_months, message = FALSE}
+Let's visualize this for species with more than 100 detections in
+September or October.
+
+```{r 100_detect_months, message = FALSE}
 mult_detect <- sp_month %>% 
   group_by(month, common_name) %>% 
   summarize(n_individuals = sum(group_number)) %>% # calculate number of individuals detected per species per month
   filter(n_individuals > 100) # select species detected > 100 times
+```
 
+```{r vis_100_detect_months, eval = FALSE, message = FALSE}
 ggplot(mult_detect, aes(x = common_name, y = n_individuals, fill = month)) +
   geom_bar(stat = "identity") +
   labs(x = "Species detected", y = "Number of individuals", fill = "Month") +
@@ -59,15 +69,22 @@ ggplot(mult_detect, aes(x = common_name, y = n_individuals, fill = month)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1))
 ```
 
+```{r plot_vis_100_detect_months, echo = FALSE}
+knitr::include_graphics("figs/vis_100_detect_months-1.png")
+```
+
 ### Carnivora order detections
 
-Focusing on the order Carnivora, we want to visualize the number of individuals in each species detected in September and October.
+Focusing on the order Carnivora, we want to visualize the number of
+individuals in each species detected in September and October.
 
-```{r vis_carnivora_months, message = FALSE}
+```{r carnivora_months, message = FALSE}
 carnivora <- sp_month[sp_month$order == "Carnivora", ] %>% # select species in order Carnivora
   group_by(month, common_name) %>% 
   summarize(n_individuals = sum(group_number)) # calculate number of individuals detected per species per month
+```
 
+```{r vis_carnivora_months, eval = FALSE, message = FALSE}
 ggplot(carnivora, aes(x = common_name, y = n_individuals, fill = month)) +
   geom_bar(stat = "identity") +
   labs(x = "Species detected", y = "Number of individuals", fill = "Month") +
@@ -76,11 +93,17 @@ ggplot(carnivora, aes(x = common_name, y = n_individuals, fill = month)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1))
 ```
 
+```{r plot_vis_carnivora_months, echo = FALSE}
+knitr::include_graphics("figs/vis_carnivora_months-1.png")
+```
+
 ## Detections across orders
 
-Many detections were only identified to the order level. Rather than looking at the species level, we want to visualize the number of individuals in each order detected in September and October.
+Many detections were only identified to the order level. Rather than
+looking at the species level, we want to visualize the number of
+individuals in each order detected in September and October.
 
-```{r vis_order_months, message = FALSE}
+```{r order_months, message = FALSE}
 wlf_detect <- detection
 wlf_detect$species[is.na(wlf_detect$species)] <- "unknown" # convert NA values to "unknown"
 
@@ -93,7 +116,9 @@ n_order <- wlf_detect[wlf_detect$species != "sapiens", ] %>% # filter out detect
          !is.na(order)) %>% # remove NAs
   group_by(month, order) %>% # group by month, then order 
   summarise(n_individuals = sum(group_number))  # calculate number of individuals detected per order per month
+```
 
+```{r vis_order_months, eval = FALSE, message = FALSE}
 ggplot(n_order, aes(x = order, y = n_individuals, fill = month)) +
   geom_bar(stat = "identity") +
   labs(x = "Order detected", y = "Number of individuals", fill = "Month") +
@@ -102,9 +127,14 @@ ggplot(n_order, aes(x = order, y = n_individuals, fill = month)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1))
 ```
 
+```{r plot_vis_order_months, echo = FALSE}
+knitr::include_graphics("figs/vis_order_months-1.png")
+```
+
 ## Detections over time
 
-We want to visualize wildlife trends over time in a couple of ways. Let's break this down again to help understand the bigger picture.
+We want to visualize wildlife trends over time in a couple of ways.
+Let's break this down again to help understand the bigger picture.
 
 ```{r detect_time, message = FALSE}
 detect_wlf <- detection
@@ -140,13 +170,16 @@ year(sp_time$julian_day) <- 2000 # set year to be the same for all julian days
 
 ### Wildlife detections over time
 
-We want to visualize the number of individuals detected over time and compare across years.
+We want to visualize the number of individuals detected over time and
+compare across years.
 
 ```{r wlf_time, message = FALSE}
 wlf_time <- sp_time[sp_time$term != "human-domestic", ] %>% 
   group_by(year, julian_day) %>% # group by year, then julian day
   summarise(n_individuals = sum(group_number)) # calculate number of individuals detected daily per year
+```
 
+```{r vis_wlf_time, eval = FALSE, message = FALSE}
 ggplot(wlf_time, aes(x = julian_day, 
                      y = n_individuals, 
                      color = as.factor(year))) +
@@ -156,15 +189,23 @@ ggplot(wlf_time, aes(x = julian_day,
   theme_classic()
 ```
 
+```{r plot_vis_wlf_time, echo = FALSE}
+knitr::include_graphics("figs/vis_wlf_time-1.png")
+```
+
 ### Wildlife and human-domestic detections over time
 
-We want to visualize the number of individuals detected over time, along with the number of humans and domestic animals. We will first look at the year level.
+We want to visualize the number of individuals detected over time, along
+with the number of humans and domestic animals. We will first look at
+the year level.
 
 ```{r wlf_human_time, message = FALSE}
 wlf_human_time <- sp_time%>% 
   group_by(date, term) %>% # group by date
   summarise(n_individuals = sum(group_number)) # calculate number of individuals detected daily across years
+```
 
+```{r vis_wlf_human_time, eval = FALSE, message = FALSE}
 ggplot(wlf_human_time, aes(x = date, 
                      y = n_individuals, 
                      color = term)) +
@@ -174,13 +215,19 @@ ggplot(wlf_human_time, aes(x = date,
   theme_classic()
 ```
 
+```{r plot_vis_wlf_human_time, echo = FALSE}
+knitr::include_graphics("figs/vis_wlf_human_time-1.png")
+```
+
 Now, let's look at a monthly level.
 
 ```{r wlf_human_julian, message = FALSE}
 wlf_human_julian <- sp_time%>% 
   group_by(year, julian_day, term) %>% # group by year, then julian day, then term
   summarise(n_individuals = sum(group_number)) # calculate number of individuals detected daily per year
+```
 
+```{r vis_wlf_human_julian, eval = FALSE, message = FALSE}
 ggplot(wlf_human_julian, aes(x = julian_day, 
                      y = n_individuals, 
                      color = term)) +
@@ -190,4 +237,9 @@ ggplot(wlf_human_julian, aes(x = julian_day,
   theme_classic()
 ```
 
-Surprisingly, wildlife detections do not appear to decrease as human and domestic animal detections increase.
+```{r plot_vis_wlf_human_julian, echo = FALSE}
+knitr::include_graphics("figs/vis_wlf_human_julian-1.png")
+```
+
+Surprisingly, wildlife detections do not appear to decrease as human and
+domestic animal detections increase.
